524/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:37:51 **** Rebuild of configuration Debug for project 524 ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o 524.o "..\\524.cpp" 
g++ -o 524.exe 524.o 
Info: Nothing to build for 524
14:38:47 **** Incremental Build of configuration Debug for project 524 ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o 524.o "..\\524.cpp" 
g++ -o 524.exe 524.o 
15:14:48 **** Incremental Build of configuration Debug for project 524 ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o 524.o "..\\524.cpp" 
..\524.cpp:12:3: error: expected '}' before numeric constant
   0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0}
   ^
..\524.cpp:11:15: note: to match this '{'
 int prim[105]={0,1,1,1,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,0,0,1
               ^
..\524.cpp:12:3: error: expected ',' or ';' before numeric constant
   0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0}
   ^
..\524.cpp:12:50: error: expected declaration before '}' token
   0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0}
                                                  ^
15:15:03 **** Incremental Build of configuration Debug for project 524 ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o 524.o "..\\524.cpp" 
..\524.cpp:12:3: error: expected '}' before numeric constant
   0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0}
   ^
..\524.cpp:11:15: note: to match this '{'
 int prim[105]={0,1,1,1,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,0,0,1
               ^
..\524.cpp:12:3: error: expected ',' or ';' before numeric constant
   0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0}
   ^
..\524.cpp:12:50: error: expected declaration before '}' token
   0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0}
                                                  ^
15:16:23 **** Incremental Build of configuration Debug for project 524 ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o 524.o "..\\524.cpp" 
..\524.cpp:12:3: error: expected '}' before numeric constant
   0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0}
   ^
..\524.cpp:11:15: note: to match this '{'
 int prim[105]={0,1,1,1,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,0,0,1
               ^
..\524.cpp:12:3: error: expected ',' or ';' before numeric constant
   0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0}
   ^
..\524.cpp:12:50: error: expected declaration before '}' token
   0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0}
                                                  ^
